# ezwgd

./: .gitignore  Dockerfile  README.md  coverage.xml  grep  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: auto-ci.yml
dataset_example/: READ.ME
dataset_test/: PveriPEP.faa  PvulgPEP.faa  READ.ME  cds1.fna  cds2.fna  prot.aln  prot.faa  prot1.faa  prot2.faa
dataset_test/utils/: ill1.gff3  mcscan_res.txt
docs/: index.md
src/ezwgd/: __init__.py  _base.py  _custom.py  frontend.py
src/ezwgd/coll/: _corecoll.py  powercoll.py
src/ezwgd/evo/: dnds.py
src/ezwgd/evolution/: dnds.py
src/ezwgd/frontend/: PAML.py  frontend.py
src/ezwgd/plot/: kaks.py
src/ezwgd/tidy/: rename.py
src/ezwgd/utils/: __init__.py  parse.py
src/tests/: test_utils.py
test_dataset/: cds.fna  cds1.fna  cds2.fna  codon.aln  prot1.faa  prot2.faa  testing.gff3
test_dataset/plot/: ka.res
test_dataset/utils/: testing1.fna  testing1.gff3
tests/: test_frontend.py  test_paml.py  test_utils.py
