[project]
name = "ezWGD"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "hyli360", email = "lihuanyu2003@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"
